# LearnCeres

./: BAL.cpp  CMakeLists.txt  README.md  main.cpp  oldmain.cpp  oldmain2.cpp  testmain.cpp
cmake/: Eigen3.cmake  Sophus.cmake  ceres.cmake  global_difination.cmake  glog.cmake  opencv.cmake  yaml.cmake
config/: config.yaml
include/: data.cpp
include/diff3/: Analytic_Derivatives.h  Auto_Derivatives.h  CurveFitting.h  Numeric_Derivatives.h  PowellFunction.h
include/global_defination/: global_defination.h  global_defination.hpp
log/: LearnCeres.INFO  LearnCeres.ubuntu.tjl.log.INFO.20221213-055942.13231  LearnCeres.ubuntu.tjl.log.INFO.20221213-060109.13410  LearnCeres.ubuntu.tjl.log.INFO.20221213-060732.13639  LearnCeres.ubuntu.tjl.log.INFO.20221214-003016.7079
log/log/: 10_0.txt  10_1.txt  10_2.txt  10_3.txt  10_4.txt  10_5.txt  11_0.txt  11_1.txt  11_2.txt  11_3.txt  11_4.txt  11_5.txt  12_0.txt  12_1.txt  12_2.txt  12_3.txt  12_4.txt  12_5.txt  13_0.txt  13_1.txt  13_2.txt  13_3.txt  13_4.txt  13_5.txt  14_0.txt  14_1.txt  14_2.txt  14_3.txt  14_4.txt  14_5.txt  15_0.txt  15_1.txt  15_2.txt  15_3.txt  15_4.txt  15_5.txt  8_0.txt  8_1.txt  8_2.txt  8_3.txt  (+8 more)
log/log2/: 10_0.txt  11_0.txt  11_1.txt  12_0.txt  14_0.txt  15_0.txt  20_0.txt  23_0.txt  25_0.txt  26_0.txt
src/diff3/: Analytic_Derivatives.cpp  Auto_Derivatives.cpp  CurveFitting.cpp  Numeric_Derivatives.cpp  PowellFunction.cpp
